# rogue

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: windows-compile.yml
assets/data/: actors.ron
crates/bread_and_iron/: Cargo.toml
crates/bread_and_iron/src/: lib.rs
crates/bread_and_iron_app/: Cargo.toml
crates/bread_and_iron_app/src/: game.rs  main.rs
crates/bread_and_iron_app/src/assets/: loading.rs  mod.rs
crates/bread_and_iron_app/src/input/: keyboard.rs  mapping.rs
crates/bread_and_iron_app/src/persistence/: files.rs  mod.rs
crates/bread_and_iron_app/src/presentation/: actor_view.rs  camera.rs  map_view.rs  mod.rs
crates/bread_and_iron_app/src/ui/: hud.rs  log.rs
crates/bread_and_iron_app/tests/: app_loop.rs
crates/rogue_app/: Cargo.toml
crates/rogue_app/src/: app_state.rs  game.rs  lib.rs  main.rs
crates/rogue_app/src/assets/: loading.rs  mod.rs
crates/rogue_app/src/input/: keyboard.rs  mapping.rs  mod.rs
crates/rogue_app/src/persistence/: files.rs  mod.rs
crates/rogue_app/src/presentation/: actor_view.rs  animation.rs  camera.rs  map_view.rs  mod.rs  synchronization.rs
crates/rogue_app/src/ui/: hud.rs  inventory.rs  log.rs  mod.rs  targeting.rs
crates/rogue_app/tests/: app_loop.rs
crates/rogue_core/: Cargo.toml
crates/rogue_core/src/: lib.rs  simulation.rs
crates/rogue_core/src/action/: intent.rs  mod.rs  queue.rs  resolver.rs  schedule.rs
crates/rogue_core/src/actor/: ai.rs  combat.rs  components.rs  mod.rs  spawn.rs
crates/rogue_core/src/content/: definitions.rs  mod.rs  registry.rs
crates/rogue_core/src/item/: components.rs  effects.rs  inventory.rs  mod.rs
crates/rogue_core/src/persistence/: migration.rs  mod.rs  rng.rs  snapshot.rs
crates/rogue_core/src/time/: clock.rs  mod.rs  scheduler.rs
crates/rogue_core/src/world/: fov.rs  generation.rs  map.rs  mod.rs  spatial.rs  tile.rs
crates/rogue_core/tests/: combat.rs  deterministic_replay.rs  fov.rs
crates/rogue_core/tests/fixtures/: deterministic_replay.ron  legacy_snapshot_v1.ron
crates/sim_core/: Cargo.toml
crates/sim_core/src/: command.rs  driver.rs  effects.rs  identity.rs  lib.rs  persistence.rs  rng.rs  schedule.rs  time.rs  work_budget.rs
crates/sim_core/src/persistence/: migration.rs  version.rs
crates/sim_core/tests/: foundation.rs
crates/tactical_sim/: Cargo.toml
crates/tactical_sim/src/: simulation.rs
crates/tactical_sim/src/action/: intent.rs  resolver.rs
crates/tactical_sim/src/actor/: ai.rs  components.rs  mod.rs  spawn.rs
crates/tactical_sim/src/content/: definitions.rs  mod.rs
crates/tactical_sim/src/item/: components.rs
crates/tactical_sim/src/persistence/: migration.rs  mod.rs  snapshot.rs
crates/tactical_sim/tests/: combat.rs  deterministic_replay.rs  fov.rs  generation.rs  support.rs
docs/: architecture-2nd.md  architecture.md  engine-game-boundary.md
src/: lib.rs
tests/: app_loop.rs  combat.rs  deterministic_replay.rs  generation.rs
(+8 files in other folders)
