[package]
name = "rogue"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/rogue_core",
    "crates/rogue_app",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bevy = {
    version = "0.19",
    default-features = false,
    features = ["2d", "ui"],
}
bevy_app = "0.19"
bevy_ecs = "0.19"
bevy_math = "0.19"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[dependencies]
rogue_core = { path = "crates/rogue_core" }

[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
debug = 0
