[workspace]
members = [
    "crates/sim_core",
    "crates/tactical_sim",
    "crates/bread_and_iron",
    "crates/bread_and_iron_app",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bevy = {
    version = "0.19",
    default-features = false,
    features = ["2d", "ui", "default_font"],
}
bevy_app = "0.19"
bevy_ecs = "0.19"
bevy_math = "0.19"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
debug = 0
