[package]
name = "rogue_app"
version.workspace = true
edition.workspace = true

[features]
default = []
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_math = { workspace = true }
ron = { workspace = true }
rogue_core = { path = "../rogue_core" }
