[package]
name = "rogue_core"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_math = { workspace = true }
blake3 = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
sim_core = { path = "../sim_core" }
